--- a/TinymceDemo/Views/Home/Index.cshtml
+++ b/TinymceDemo/Views/Home/Index.cshtml
@@ -1,45 +1,90 @@
 ﻿
+@model TinymceDemo.Models.TinyMCEModels
 @{
     ViewBag.Title = "Index";
 }
-<script src="~/Scripts/tinymce/tinymce.min.js"></script>
 
-<script>
-  tinymce.init({
-      selector: '#mytextarea',
-      toolbar: "image",
-      plugins: "image imagetools",
-      file_browser_callback_types: 'file image media',
-      //images_upload_url: 'Upload',
-      images_upload_base_path: '/some/basepath',
-      imagetools_proxy: 'Upload',
-      image_caption: true,
-      image_advtab: true,
-      file_browser_callback: function (field_name, url, type, win) {
-          console.log(field_name);
-          win.document.getElementById(field_name).value = 'my browser value';
-      },
-      file_picker_callback: function (callback, value, meta) {
-          // Provide file and text for the link dialog
-          if (meta.filetype == 'file') {
-              callback('mypage.html', { text: 'My text' });
-          }
+<script type="text/javascript">
+    $(document).ready(function () {
+        var tinymceEditor;
+        tinymce.init({
+            selector: "textarea#content",
+            auto_focus: "content",
+            language: "zh_CN",
+            theme: "modern",
+            plugins: [
+                "advlist autolink lists link image charmap preview",
+                "searchreplace visualblocks fullscreen",
+                "insertdatetime media table contextmenu paste",
+                "emoticons textcolor"
+            ],
+            toolbar1: "undo redo | styleselect | fontselect | fontsizeselect | bold italic underline strikethrough | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent",
+            toolbar2: "fullscreen preview | forecolor backcolor emoticons | table | link image media | mybutton",
+            setup: function (editor) {
+                editor.addButton('mybutton', {
+                    text: '上传图片',
+                    icon: false,
+                    onclick: function () {
+                        tinymceEditor = editor;
+                        $("#uploadofedit").dialog({
+                            modal: true,
+                            resizable: false,
+                            width: 400,
+                            height: 200,
+                            dialogClass: "mceuploadify"
+                        });
+                    }
+                });
+            },
+            //TinyMCE 会将所有的 font 元素转换成 span 元素
+            convert_fonts_to_spans: true,
+            //换行符会被转换成 br 元素
+            convert_newlines_to_brs: false,
+            //在换行处 TinyMCE 会用 BR 元素而不是插入段落
+            force_br_newlines: false,
+            //当返回或进入 Mozilla/Firefox 时，这个选项可以打开/关闭段落的建立
+            force_p_newlines: false,
+            //这个选项控制是否将换行符从输出的 HTML 中去除。选项默认打开，因为许多服务端系统将换行转换成 <br />，因为文本是在无格式的 textarea 中输入的。使用这个选项可以让所有内容在同一行。
+            remove_linebreaks: false,
+            //不能把这个设置去掉，不然图片路径会出错
+            relative_urls: false,
+            //不允许拖动大小
+            resize: false,
 
-          // Provide image and alt text for the image dialog
-          if (meta.filetype == 'image') {
-              callback('/Images/image1.jpg', { alt: 'My alt text' });
-          }
+            font_formats: "宋体=宋体;黑体=黑体;仿宋=仿宋;楷体=楷体;隶书=隶书;幼圆=幼圆;Arial=arial,helvetica,sans-serif;Comic Sans MS=comic sans ms,sans-serif;Courier New=courier new,courier;Tahoma=tahoma,arial,helvetica,sans-serif;Times New Roman=times new roman,times;Verdana=verdana,geneva;Webdings=webdings;Wingdings=wingdings,zapf dingbats",
+            fontsize_formats: "8pt 10pt 12pt 14pt 18pt 24pt 36pt"
+        });
 
-          // Provide alternative source and posted for the media dialog
-          if (meta.filetype == 'media') {
-              callback('movie.mp4', { source2: 'alt.ogg', poster: 'image.jpg' });
-          }
-      }
-  });
+        $("#tinymceuploadify").uploadify({
+            'swf': '../Scripts/uploadify/uploadify.swf',
+            'buttonText': '上传本地图片',
+            'uploader': '/Home/Upload',
+            'auto': true,
+            'method': 'post',
+            'multi': false,
+            'onUploadSuccess': function (event, data, flag) {
+                var img = "<img  src='../../File/" + data + "'>";
+                tinymceEditor.insertContent(img);
+                setTimeout(function () {
+                    $("#uploadofedit").dialog('close');
+                }, 1000);
+            },
+            'onUploadError': function () {
+                setTimeout(function () {
+                    $("#uploadofedit").dialog('close');
+                }, 1000);
+                alert("上传失败");
+            }
+        });
+    });
 </script>
-
-<h1>TinyMCE Quick Start Guide</h1>
-<form method="post">
-    <textarea id="mytextarea">Hello, World!</textarea>
-</form>
-
+<div>
+    <form method="post" action="/Home/Index">
+        <textarea id="content" name="content" style="width: 100%; height: 600px;"></textarea>
+        <input type="submit" value="提交" />
+    </form>
+</div>
+<div id='uploadofedit' style="display:none;">
+    <input type='file' name='tinymceuploadify' id='tinymceuploadify' />
+    <label>只能上传单张10M以下的 png、jpg、gif 格式的图片</label>
+</div>
