--- a/TinymceDemo/Views/Home/Index.cshtml
+++ b/TinymceDemo/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
     });
 </script>
 <div>
-    <form method="post" action="/Home/Index">
+    <form method="post" action="/Home/Test">
         <textarea id="content" name="content" style="width: 100%; height: 600px;"></textarea>
         <input type="submit" value="提交" />
     </form>
